--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ install: sudo ./install-dependencies.sh
 script:
   - ./blaze.sh -ninja
   - cd build-dbg
-  - make base
-  - make bits_test fiber_demo
+  - ninja -j4 base
+  - ninja -j4 bits_test fiber_demo
