Add log printing

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,7 @@ script:
   - cd build-dbg
   - ninja -j4 base
   - ninja -j4 bits_test fiber_demo
+
+after_failure:
+  - pwd && cat build/reports/tests/index.html
+  - find ../third_party/src/ -regex ".*\(err\|out\).log" | xargs -n 3 -t cat
