--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,4 +51,6 @@ endif ()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(base)
+add_subdirectory(util)
 add_subdirectory(examples)
+
