--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "third_party/abseil-cpp"]
-	path = third_party/abseil-cpp
-	url = https://github.com/romange/abseil-cpp.git
+[submodule "abseil-cpp"]
+	path = abseil-cpp
+	url = https://github.com/romange/abseil-cpp
