Add sp task pool

--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -1,2 +1,9 @@
 add_subdirectory(math)
 add_subdirectory(coding)
+
+
+add_library(task_pool sp_task_pool.cc)
+cxx_link(task_pool base TRDP::folly)
+
+cxx_test(sp_task_pool_test base task_pool LABELS CI)
+
