--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -1,6 +1,15 @@
 add_subdirectory(math)
 add_subdirectory(coding)
 
+add_library(status status.cc)
+cxx_link(status base status_proto)
+cxx_proto_lib(status PY)
+
+add_library(util zlib_source.cc # crc32c.cc
+            sinksource.cc zstd_sinksource.cc)
+
+cxx_link(util coding strings z status TRDP::lz4 TRDP::zstd)
+
 
 add_library(task_pool sp_task_pool.cc)
 cxx_link(task_pool base TRDP::folly)
