--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ add_subdirectory(abseil-cpp)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(base)
+add_subdirectory(strings)
 add_subdirectory(util)
 add_subdirectory(examples)
 
