--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -8,11 +8,12 @@ cxx_proto_lib(status PY)
 add_library(util zlib_source.cc # crc32c.cc
             sinksource.cc zstd_sinksource.cc)
 
-cxx_link(util coding strings z status TRDP::lz4 TRDP::zstd)
+cxx_link(util strings z status TRDP::lz4 TRDP::zstd)
 
 
 add_library(task_pool sp_task_pool.cc)
 cxx_link(task_pool base TRDP::folly)
 
 cxx_test(sp_task_pool_test base task_pool LABELS CI)
+cxx_test(sinksource_test strings util LABELS CI)
 
