--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,13 @@ before_install:
 install: sudo ./install-dependencies.sh
 
 script:
-  - ./blaze.sh -ninja && cd build-dbg
-  - ninja -j4 base
-  - ninja -j4 bits_test fiber_demo
+  - mkdir testresults && ./blaze.sh -ninja && cd build-dbg
+  - ninja -j4 base 
+  - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
+  - ninja -j4 $tests_list -k 10
+  - echo $tests_list |  xargs -n1 -t ../scripts/run_test.sh -l ../testresults -t 25 --name
 
 after_failure:
   - pwd
   - find ../third_party/src/ -regex ".*\(err\|out\).log" | xargs -n 3 -t cat
+  - find ../testresults | xargs -n 3 -t cat
