Give up on folly/asbeil in strings

--- a/strings/CMakeLists.txt
+++ b/strings/CMakeLists.txt
@@ -1,11 +1,16 @@
-add_library(strings unique_strings.cc stringpiece.cc)
-target_link_libraries(strings base absl::strings TRDP::folly)
-add_dependencies(strings TRDP::sparsehash)
+add_library(strings ascii_ctype.cc charset.cc join.cc human_readable.cc escaping.cc
+            strcat.cc stringpiece.cc range.cc
+            stringprintf.cc split.cc strip.cc util.cc numbers.cc strtoint.cc
+            unique_strings.cc)
+target_link_libraries(strings base)
+add_dependencies(strings sparsehash_project)
 
-#add_library(strpmr strpmr.cc)
-# target_link_libraries(strpmr TRDP::pmr strings)
+add_library(strpmr strpmr.cc)
+target_link_libraries(strpmr TRDP::pmr strings)
 
-# 
-#cxx_test(range_test strings LABELS CI)
-cxx_test(unique_strings_test strings)
-# cxx_test(strpmr_test strings)
+
+cxx_test(range_test strings LABELS CI)
+cxx_test(unique_strings_test strings LABELS CI)
+cxx_test(urlencode_test strings LABELS CI)
+cxx_test(strcat_test strings LABELS CI)
+cxx_test(strpmr_test strings LABELS CI)
