--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -14,6 +14,10 @@ cxx_link(util strings z status TRDP::lz4 TRDP::zstd)
 add_library(task_pool sp_task_pool.cc)
 cxx_link(task_pool base TRDP::folly)
 
+add_library(fibers sq_threadpool.cc)
+cxx_link(fibers base ${Boost_LIBRARIES})
+add_include(fibers ${Boost_INCLUDE_DIR})
+
 cxx_test(sp_task_pool_test base task_pool LABELS CI)
 cxx_test(sinksource_test strings util LABELS CI)
 
