--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(base arena.cc bits.cc hash.cc init.cc logging.cc simd.cc walltime.cc pthread_utils.cc)
 cxx_link(base TRDP::glog TRDP::gflags TRDP::pmr TRDP::xxhash atomic)
+add_dependencies(base sparsehash_project)
 
 cxx_test(bits_test LABELS CI)
 cxx_test(pod_array_test base LABELS CI)
