--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ dist: xenial
 language: cpp
 os: linux
 
+cache:
+  directories:
+  - /opt/boost_1_66_0
+
 matrix:
   include:
     - compiler: gcc
@@ -16,7 +20,7 @@ install: sudo ./install-dependencies.sh
 
 script:
   - mkdir testresults && ./blaze.sh -ninja && cd build-dbg
-  - ninja -j4 base 
+  - ninja -j4 base
   - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
   - ninja -j4 $tests_list -k 10
   - echo $tests_list |  xargs -n1 -t ../scripts/run_test.sh -l ../testresults -t 25 --name
