--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(base arena.cc bits.cc hash.cc init.cc logging.cc simd.cc walltime.cc pthread_utils.cc)
+add_library(base arena.cc bits.cc crc32c.cc hash.cc init.cc logging.cc simd.cc walltime.cc pthread_utils.cc)
 cxx_link(base TRDP::glog TRDP::gflags TRDP::pmr TRDP::xxhash atomic)
 add_dependencies(base sparsehash_project)
 
@@ -6,7 +6,8 @@ cxx_test(bits_test LABELS CI)
 cxx_test(pod_array_test base LABELS CI)
 cxx_test(arena_test base strings LABELS CI)
 cxx_test(pmr_test base TRDP::pmr LABELS CI)
-cxx_test(simd_test base  LABELS CI)
+cxx_test(simd_test base LABELS CI)
+cxx_test(crc32c_test base LABELS CI)
 
 #TBD: cxx_test(hash_test base file DATA testdata/ids.txt.gz LABELS CI)
 
