--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,5 +39,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(base)
 add_subdirectory(strings)
 add_subdirectory(util)
+add_subdirectory(file)
 add_subdirectory(examples)
 
