--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(base arena.cc bits.cc crc32c.cc coder.cc hash.cc init.cc logging.cc simd.cc varint.cc walltime.cc pthread_utils.cc)
-cxx_link(base TRDP::glog TRDP::gflags TRDP::pmr TRDP::xxhash atomic)
+cxx_link(base TRDP::glog TRDP::gflags TRDP::pmr TRDP::xxhash atomic rt)  # rt for timer_create etc.
 add_dependencies(base sparsehash_project)
 
 cxx_test(bits_test LABELS CI)
@@ -8,7 +8,7 @@ cxx_test(arena_test base strings LABELS CI)
 cxx_test(pmr_test base TRDP::pmr LABELS CI)
 cxx_test(simd_test base LABELS CI)
 cxx_test(crc32c_test base LABELS CI)
-
+cxx_test(walltime_test base LABELS CI)
 #TBD: cxx_test(hash_test base file DATA testdata/ids.txt.gz LABELS CI)
 
 
