--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ cache:
   directories:
   - /opt/boost_1_66_0
 
+env:
+  - LSAN_OPTIONS=suppressions=$HOME/supress.txt
+
+
 matrix:
   include:
     - compiler: gcc
@@ -19,6 +23,7 @@ before_install:
 install: sudo ./install-dependencies.sh
 
 script:
+  - printf "leak:MallocExtension\nleak:event_base_once" > $HOME/supress.txt
   - mkdir testresults && ./blaze.sh -ninja && cd build-dbg
   - ninja -j4 base
   - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
