Add block compressor

--- a/util/coding/CMakeLists.txt
+++ b/util/coding/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(double_compressor double_compressor.cc)
-cxx_link(double_compressor base math TRDP::lz4 TRDP::blosc TRDP::zstd)
+add_library(coding double_compressor.cc block_compressor.cc)
+cxx_link(coding base math TRDP::lz4 TRDP::blosc TRDP::zstd)
 
-cxx_test(double_compressor_test LABELS CI)
-cxx_link(double_compressor_test double_compressor)
+cxx_test(double_compressor_test coding LABELS CI)
+cxx_test(block_compressor_test coding LABELS CI)
