Add flit encoding

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -9,6 +9,7 @@ cxx_test(pmr_test base TRDP::pmr LABELS CI)
 cxx_test(simd_test base LABELS CI)
 cxx_test(crc32c_test base LABELS CI)
 cxx_test(walltime_test base LABELS CI)
+cxx_test(flit_test base LABELS CI)
 #TBD: cxx_test(hash_test base file DATA testdata/ids.txt.gz LABELS CI)
 
 
