--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -12,7 +12,7 @@ add_library(task_pool sp_task_pool.cc)
 cxx_link(task_pool base TRDP::folly)
 
 add_library(fibers sq_threadpool.cc)
-cxx_link(fibers base status ${Boost_LIBRARIES} TRDP::folly)
+cxx_link(fibers base status ${Boost_LIBRARIES})
 
 cxx_test(sp_task_pool_test base task_pool LABELS CI)
 cxx_test(sinksource_test strings util LABELS CI)
