--- a/util/math/CMakeLists.txt
+++ b/util/math/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(math mathlimits.cc mathutil.cc float2decimal.cc exactfloat/exactfloat.cc)
+add_library(math mathlimits.cc mathutil.cc float2decimal.cc)
 cxx_link(math base strings crypto)
 
 cxx_test(float2decimal_test math strings TRDP::dconv LABELS CI)
