--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,19 @@ cache:
 matrix:
   include:
     - compiler: gcc
-      env: 
+      env:
         - COMPILER=g++-5 LSAN_OPTIONS=suppressions=$HOME/supress.txt
 
 
 before_install:
+  # Fix for Ubuntu Xenial apt-daily.service triggering
+  # https://unix.stackexchange.com/questions/315502/how-to-disable-apt-daily-service-on-ubuntu-cloud-vm-image
+  - |
+    sudo systemctl stop apt-daily.service &&
+    sudo systemctl kill --kill-who=all apt-daily.service &&
+    while ! (systemctl list-units --all apt-daily.service | fgrep -q dead) ; do
+      sleep 1
+    done
   - sudo apt update -qq
 
 install: sudo ./install-dependencies.sh
