Fix plang/pprint code

--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -21,3 +21,4 @@ cxx_test(sq_threadpool_test base fibers LABELS CI)
 add_subdirectory(math)
 add_subdirectory(coding)
 add_subdirectory(plang)
+add_subdirectory(pprint)
