--- a/util/plang/CMakeLists.txt
+++ b/util/plang/CMakeLists.txt
@@ -2,11 +2,11 @@ cxx_proto_lib(addressbook)
 cxx_test(proto_test addressbook_proto)
 
 add_library(plang plang.cc)
-target_link_libraries(plang protobuf math plang_parser_bison)
+cxx_link(plang TRDP::protobuf math plang_parser_bison)
 
 flex_lib(plang_scanner)
 
 bison_lib(plang_parser)
-target_link_libraries(plang_parser_bison strings plang plang_scanner_flex glog)
+cxx_link(plang_parser_bison base strings plang plang_scanner_flex)
 
-cxx_test(plang_test plang plang_parser_bison addressbook_proto)
+cxx_test(plang_test plang plang_parser_bison addressbook_proto LABELS CI)
