--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "abseil-cpp"]
 	path = abseil-cpp
-	url = https://github.com/romange/abseil-cpp
+	url = https://github.com/abseil/abseil-cpp
+    branch = master
