Add asio skeleton

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,3 +11,6 @@ cxx_link(boost_fibers fibers base dl ${Boost_LIBRARIES})
 add_executable(mr_demo_fibers mr_demo.cc)
 cxx_link(mr_demo_fibers fibers base file dl ${Boost_LIBRARIES})
 
+add_executable(asio asio.cc)
+cxx_link(asio fibers base ${Boost_LIBRARIES})
+
