--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,10 @@ before_install:
     sudo systemctl stop apt-daily.timer
     sudo systemctl stop apt-daily.service &&
     sudo systemctl kill --kill-who=all apt-daily.service
-    while (pgrep -cf apt.systemd.daily); do
+    while (pgrep -cf apt.systemd.daily > /dev/null); do
       sleep 1
     done
-  - ps aux | grep apt
   - sudo apt update -qq
-  - ps aux | grep apt
 install:
   - sudo ./install-dependencies.sh
 
