rename folly demo

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable(fiber_demo fiber_demo.cc)
-cxx_link(fiber_demo base TRDP::folly dl)
+add_executable(folly_fiber folly_fiber.cc)
+cxx_link(folly_fiber base TRDP::folly dl)
 
 add_executable(file_read file_read.cc)
 cxx_link(file_read base TRDP::folly dl)
