--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,3 +17,7 @@ cxx_link(asio fibers base absl_strings ${Boost_LIBRARIES})
 add_executable(asio_co asio_co.cc)
 cxx_link(asio_co fibers base absl_strings ${Boost_LIBRARIES})
 target_compile_definitions(asio_co PRIVATE BOOST_COROUTINES_NO_DEPRECATION_WARNING)
+
+
+add_executable(asio_fibers asio_fibers.cc)
+cxx_link(asio_fibers base ${Boost_LIBRARIES})
