StringPiece is now string_view

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -7,9 +7,9 @@ cxx_test(pod_array_test base LABELS CI)
 cxx_test(arena_test base strings LABELS CI)
 cxx_test(pmr_test base TRDP::pmr LABELS CI)
 cxx_test(simd_test base LABELS CI)
-cxx_test(crc32c_test base LABELS CI)
+cxx_test(crc32c_test base strings LABELS CI)
 cxx_test(walltime_test base LABELS CI)
-cxx_test(flit_test base LABELS CI)
+cxx_test(flit_test base strings LABELS CI)
 cxx_test(cxx_test base LABELS CI)
 cxx_test(hash_test base file DATA testdata/ids.txt.gz LABELS CI)
 cxx_test(RWSpinLock_test base LABELS CI)
