--- a/util/pprint/CMakeLists.txt
+++ b/util/pprint/CMakeLists.txt
@@ -4,7 +4,6 @@ target_link_libraries(pprint plang_parser_bison threads pprint_utils proto_write
 add_library(pprint_utils pprint_utils.cc)
 target_link_libraries(pprint_utils strings TRDP::protobuf)
 
-add_executable(pprint_utils_test pprint_utils_test.cc)
-target_link_libraries(pprint_utils_test pprint_utils pprint_utils_test_proto gtest_main gflags)
+cxx_test(pprint_utils_test  pprint_utils pprint_utils_test_proto base LABELS CI)
 
 cxx_proto_lib(pprint_utils_test)
