Factor out AcceptServer

--- a/util/asio/CMakeLists.txt
+++ b/util/asio/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(asio_fiber_lib io_context_pool.cc connection.cc)
-cxx_link(asio_fiber_lib base http ${Boost_LIBRARIES})
+add_library(asio_fiber_lib io_context_pool.cc connection.cc yield.cc accept_server.cc)
+cxx_link(asio_fiber_lib base ${Boost_LIBRARIES})
