--- a/util/asio/CMakeLists.txt
+++ b/util/asio/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(asio_fiber_lib io_context_pool.cc connection.cc yield.cc accept_server.cc)
+add_library(asio_fiber_lib io_context_pool.cc connection_handler.cc yield.cc accept_server.cc)
 cxx_link(asio_fiber_lib base ${Boost_LIBRARIES})
