--- a/util/rpc/CMakeLists.txt
+++ b/util/rpc/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(rpc frame_format.cc)
+add_library(rpc frame_format.cc rpc_server.cc)
 cxx_link(rpc base status strings ${Boost_LIBRARIES})
