--- a/strings/CMakeLists.txt
+++ b/strings/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(strings  human_readable.cc
             unique_strings.cc)
 target_link_libraries(strings base absl_strings)
 add_dependencies(strings sparsehash_project)
+set_property(TARGET strings APPEND PROPERTY COMPILE_OPTIONS "-Wno-implicit-fallthrough")
 
 add_library(strpmr strpmr.cc)
 target_link_libraries(strpmr TRDP::pmr strings)
