--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(base arena.cc bits.cc crc32c.cc coder.cc hash.cc init.cc logging.cc 
 cxx_link(base TRDP::glog TRDP::gflags TRDP::pmr TRDP::xxhash atomic rt)  # rt for timer_create etc.
 add_dependencies(base sparsehash_project)
 
+cxx_test(array_test base LABELS CI)
 cxx_test(bits_test LABELS CI)
 cxx_test(pod_array_test base LABELS CI)
 cxx_test(arena_test base strings LABELS CI)
