Add async client test

--- a/util/rpc/CMakeLists.txt
+++ b/util/rpc/CMakeLists.txt
@@ -5,3 +5,4 @@ add_library(rpc_test_lib rpc_test_utils.cc)
 cxx_link(rpc_test_lib rpc gtest_main)
 
 cxx_test(rpc_server_test rpc_test_lib LABELS CI)
+cxx_test(async_client_test rpc_test_lib LABELS CI)
