Fix favicon + more http work

--- a/util/http/CMakeLists.txt
+++ b/util/http/CMakeLists.txt
@@ -5,7 +5,7 @@ add_library(http http_handlers.cc http_server.cc varz_stats.cc http_server_statu
 cxx_link(http http_base util TRDP::evhtp proc_stats stats_lib threads fast_malloc)
 
 add_executable(http_main http_main.cc)
-cxx_link(http_main  asio_fiber_lib)
+cxx_link(http_main  asio_fiber_lib strings http)
 
 # requires  sudo apt-get install libcurl4-gnutls-dev
 add_library(http_client http_client.cc)
