--- a/util/http/CMakeLists.txt
+++ b/util/http/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(http_base http_status_code.cc)
 cxx_link(http_base strings)
 
-add_library(http http_handlers.cc http_server.cc varz_stats.cc http_server_status.cc)
+add_library(http http_handlers.cc http_conn_handler.cc http_server.cc varz_stats.cc http_server_status.cc)
 cxx_link(http http_base util TRDP::evhtp proc_stats stats_lib threads fast_malloc)
 
 add_executable(http_main http_main.cc)
