--- a/util/asio/CMakeLists.txt
+++ b/util/asio/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_library(asio_fiber_lib io_context_pool.cc channel.cc connection_handler.cc yield.cc accept_server.cc)
+add_library(asio_fiber_lib io_context_pool.cc channel.cc connection_handler.cc yield.cc
+            accept_server.cc periodic_task.cc)
 cxx_link(asio_fiber_lib base ${Boost_LIBRARIES})
+
+cxx_test(periodic_task_test asio_fiber_lib LABELS CI)
