Move varz_stats out of http

--- a/util/http/CMakeLists.txt
+++ b/util/http/CMakeLists.txt
@@ -4,7 +4,7 @@ cxx_link(http_base strings)
 #add_library(http http_handlers.cc http_server.cc varz_stats.cc http_server_status.cc)
 #cxx_link(http http_base util TRDP::evhtp proc_stats stats_lib threads fast_malloc)
 
-add_library(http_v2 http_conn_handler.cc varz_stats.cc status_page.cc)
+add_library(http_v2 http_conn_handler.cc status_page.cc)
 cxx_link(http_v2 strings proc_stats stats_lib threads fast_malloc)
 
 add_executable(http_main http_main.cc)
