--- a/util/rpc/CMakeLists.txt
+++ b/util/rpc/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(rpc frame_format.cc rpc_connection.cc async_client.cc)
+add_library(rpc frame_format.cc rpc_connection.cc client_base.cc)
 cxx_link(rpc base asio_fiber_lib status strings ${Boost_LIBRARIES})
 
 add_library(rpc_test_lib rpc_test_utils.cc)
