--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ set(GOLD_CXX_FLAGS ${CMAKE_CXX_FLAGS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 if (NOT ONLY_THIRD_PARTY)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-sign-compare")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-sign-compare -Wno-missing-field-initializers")
   add_subdirectory(abseil-cpp)
   set(CMAKE_CXX_FLAGS "${GOLD_CXX_FLAGS}")
 
