--- a/util/http/CMakeLists.txt
+++ b/util/http/CMakeLists.txt
@@ -5,10 +5,10 @@ cxx_link(http_base strings)
 #cxx_link(http http_base util TRDP::evhtp proc_stats stats_lib threads fast_malloc)
 
 add_library(http_v2 http_conn_handler.cc status_page.cc)
-cxx_link(http_v2 strings proc_stats stats_lib threads fast_malloc)
+cxx_link(http_v2 asio_fiber_lib proc_stats strings stats_lib fast_malloc)
 
 add_executable(http_main http_main.cc)
-cxx_link(http_main  asio_fiber_lib strings http_v2)
+cxx_link(http_main http_v2)
 
 # requires  sudo apt-get install libcurl4-gnutls-dev
 add_library(http_client http_client.cc)
