--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -21,7 +21,7 @@ cxx_test(sp_task_pool_test base threads util LABELS CI)
 add_library(fibers sq_threadpool.cc)
 cxx_link(fibers base status strings ${Boost_LIBRARIES})
 
-add_library(proc_stats proc_stats.cc)
+add_library(proc_stats proc_stats.cc spawn.cc)
 cxx_link(proc_stats strings)
 
 cxx_test(sinksource_test strings util LABELS CI)
