Move pprint lst_print_example

--- a/util/pprint/CMakeLists.txt
+++ b/util/pprint/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_library(pprint_utils pprint_utils.cc file_printer.cc)
-target_link_libraries(pprint_utils threads strings pb2json TRDP::protobuf)
+target_link_libraries(pprint_utils threads strings pb2json proto_writer plang_parser_bison
+                      TRDP::protobuf)
 
-add_executable(pprint pprint.cc)
-target_link_libraries(pprint plang_parser_bison pprint_utils proto_writer file)
+add_executable(lst_print_example lst_print_example.cc)
+target_link_libraries(lst_print_example pprint_utils)
 
 
 cxx_test(pprint_utils_test  pprint_utils pprint_utils_test_proto base LABELS CI)
