HTTP: add fiber friendly http client

--- a/util/http/CMakeLists.txt
+++ b/util/http/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(http_main http_main.cc)
 cxx_link(http_main http_v2)
 
 # requires  sudo apt-get install libcurl4-gnutls-dev
-add_library(http_client http_client.cc http_status_code.cc)
-cxx_link(http_client strings curl util)
+add_library(http_client http_client.cc)
+cxx_link(http_client strings asio_fiber_lib)
 
-cxx_test(http_test http_v2 LABELS CI)
+cxx_test(http_test http_v2 http_client LABELS CI)
