Add an example binary + fix build

--- a/util/http/CMakeLists.txt
+++ b/util/http/CMakeLists.txt
@@ -4,8 +4,7 @@ cxx_link(http_v2 asio_fiber_lib proc_stats strings stats_lib fast_malloc)
 add_executable(http_main http_main.cc)
 cxx_link(http_main http_v2)
 
-# requires  sudo apt-get install libcurl4-gnutls-dev
-add_library(http_client http_client.cc)
-cxx_link(http_client strings asio_fiber_lib)
+add_library(http_client_lib http_client.cc)
+cxx_link(http_client_lib strings asio_fiber_lib)
 
-cxx_test(http_test http_v2 http_client LABELS CI)
+cxx_test(http_test http_v2 http_client_lib LABELS CI)
