--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -21,3 +21,6 @@ target_compile_definitions(asio_co PRIVATE BOOST_COROUTINES_NO_DEPRECATION_WARNI
 
 add_executable(asio_fibers asio_fibers.cc)
 cxx_link(asio_fibers base http_v2 dl strings rpc)
+
+add_executable(http_client_tool http_client_tool.cc)
+cxx_link(http_client_tool http_client_lib asio_fiber_lib)
