--- a/util/rpc/CMakeLists.txt
+++ b/util/rpc/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(rpc frame_format.cc rpc_connection.cc client_base.cc impl/rpc_conn_handler.cc)
-cxx_link(rpc base asio_fiber_lib strings absl_hash ${Boost_LIBRARIES})
+cxx_link(rpc base asio_fiber_lib strings absl_hash absl_flat_hash_map ${Boost_LIBRARIES})
 
 add_library(rpc_test_lib rpc_test_utils.cc)
 cxx_link(rpc_test_lib rpc gtest_main)
