Add sentry skelenton files

--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -27,11 +27,12 @@ cxx_test(sinksource_test strings util LABELS CI)
 cxx_test(sq_threadpool_test base fibers LABELS CI)
 cxx_test(pb2json_test pb2json addressbook_proto LABELS CI)
 
+add_subdirectory(asio)
 add_subdirectory(http)
 add_subdirectory(math)
 add_subdirectory(coding)
 add_subdirectory(plang)
 add_subdirectory(pprint)
-add_subdirectory(stats)
-add_subdirectory(asio)
 add_subdirectory(rpc)
+add_subdirectory(sentry)
+add_subdirectory(stats)
