--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ os: linux
 cache:
   directories:
   - /opt/boost
-  - build-dbg/third_party
+  - build-dbg/third_party  # Relative to $TRAVIS_BUILD_DIR
+
+before_cache:
+  - ls $TRAVIS_BUILD_DIR/build-dbg/third_party
 
 matrix:
   include:
@@ -32,6 +35,7 @@ install:
 script:
   - printf "leak:MallocExtension\nleak:event_base_once" > $HOME/supress.txt
   - env && cat $HOME/supress.txt
+  - ls build-dbg
   - mkdir testresults && ./blaze.sh -ninja && cd build-dbg
   - ninja -j4 base
   - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
