--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ script:
   - du -hcs build-dbg
   - mkdir testresults && ./blaze.sh -ninja && cd build-dbg
   - du -hc third_party
-  - ninja -j4 base
+  - ninja -j4 base array_test
   - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
   - ninja -j4 $tests_list -k 10
   - echo $tests_list |  xargs -n1 -t ../scripts/run_test.sh -l ../testresults -t 25 --name
