--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ script:
   # - du -hc third_party
   - ninja -j4 base array_test
   - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
-  - ninja -j4 $tests_list -k 10
+  - ninja -j4 $tests_list asio_fibers -k 10
   - echo $tests_list |  xargs -n1 -t ../scripts/run_test.sh -l ../testresults -t 25 --name
 
 after_failure:
