--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ os: linux
 
 cache:
   directories:
-  - /opt/boost
+  - /opt/boost_1_69_0
   - build-dbg/third_party  # Relative to $TRAVIS_BUILD_DIR
 
 before_cache:
