--- a/util/asio/CMakeLists.txt
+++ b/util/asio/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(asio_fiber_lib io_context.cc io_context_pool.cc reconnectable_socket.cc
             connection_handler.cc yield.cc accept_server.cc periodic_task.cc
-            glog_asio_sink.cc)
+            glog_asio_sink.cc fiber_socket.cc)
 cxx_link(asio_fiber_lib base stats_lib Boost::fiber)
 
 cxx_test(periodic_task_test asio_fiber_lib LABELS CI)
