Add initial mr schema

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,5 +50,6 @@ if (NOT ONLY_THIRD_PARTY)
   add_subdirectory(strings)
   add_subdirectory(util)
   add_subdirectory(file)
+  add_subdirectory(mr)
   add_subdirectory(examples)
 endif()
