--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ language: cpp
 os: linux
 
 env:
-  - LSAN_OPTIONS=suppressions=$HOME/supress.txt
+  global:
+    - LSAN_OPTIONS=suppressions=$HOME/supress.txt
 
 cache:
   directories:
@@ -18,8 +19,8 @@ matrix:
   include:
     - compiler: gcc
       env:
-        - COMPILER=g++-5
-    - os: linux
+        - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+    - compiler: gcc
       addons:
         apt:
           sources:
@@ -27,7 +28,7 @@ matrix:
           packages:
             - g++-7
       env:
-        - COMPILER=g++-7
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
 before_install:
   # Fix for Ubuntu Xenial apt-daily.service triggering
@@ -40,6 +41,8 @@ before_install:
       sleep 1
     done
   - sudo apt update -qq
+  - eval "${MATRIX_EVAL}"
+
 install:
   - sudo ./install-dependencies.sh
   - ls -l /opt/
@@ -47,8 +50,8 @@ install:
 script:
   - printf "leak:MallocExtension\nleak:event_base_once" > $HOME/supress.txt
   - cmake --version # env && cat $HOME/supress.txt
-  - du -hcs build-dbg
-  - mkdir testresults && ./blaze.sh -ninja && cd build-dbg
+  - mkdir testresults &&
+  - cmake -L -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=/usr/bin/g++ -GNinja -DCMAKE_CXX_COMPILER_LAUNCHER=/usr/bin/ccache .. ./blaze.sh -ninja && cd build-dbg
   - ninja -j4 base array_test
   - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
   - ninja -j4 $tests_list asio_fibers -k 10
