--- a/.travis.yml
+++ b/.travis.yml
@@ -49,9 +49,10 @@ install:
 
 script:
   - printf "leak:MallocExtension\nleak:event_base_once" > $HOME/supress.txt
-  - cmake --version # env && cat $HOME/supress.txt
-  - mkdir testresults &&
-  - cmake -L -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=/usr/bin/g++ -GNinja -DCMAKE_CXX_COMPILER_LAUNCHER=/usr/bin/ccache .. ./blaze.sh -ninja && cd build-dbg
+  - cmake --version
+  - env
+  - mkdir testresults
+  - cmake -L -DCMAKE_BUILD_TYPE=Debug -GNinja -DCMAKE_CXX_COMPILER_LAUNCHER=/usr/bin/ccache ..
   - ninja -j4 base array_test
   - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
   - ninja -j4 $tests_list asio_fibers -k 10
