--- a/.travis.yml
+++ b/.travis.yml
@@ -30,14 +30,8 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
     - compiler: clang
-      addons:
-        apt:
-          sources:
-            - llvm-toolchain-xenial-6.0
-          packages:
-            - clang-6.0
       env:
-        - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
+        - MATRIX_EVAL="CC=clang && CXX=clang++"
 
 before_install:
   # Fix for Ubuntu Xenial apt-daily.service triggering
